screenshot and report files added

--- a/Reports/E2E_01Tue-Jan-24-13-26-01-IST-2023.html
+++ b/Reports/E2E_01Tue-Jan-24-13-26-01-IST-2023.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 4, 2023 10:44:42 AM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 24, 2023 01:26:01 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">E2E_01</p>
             <p class="text-sm">
-              <span>10:44:42 AM</span> / <span>00:00:11:095</span>
+              <span>1:26:01 PM</span> / <span>00:00:22:369</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">E2E_01</h5>
-<span class='badge badge-success'>01.04.2023 10:44:42 AM</span>
-<span class='badge badge-danger'>01.04.2023 10:44:53 AM</span>
-<span class='badge badge-default'>00:00:11:095</span>
+<span class='badge badge-success'>01.24.2023 1:26:01 PM</span>
+<span class='badge badge-danger'>01.24.2023 1:26:23 PM</span>
+<span class='badge badge-default'>00:00:22:369</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,164 +104,198 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:46 AM</td>
+        <td>1:26:05 PM</td>
         <td>
           Launch Browser
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:47 AM</td>
+        <td>1:26:07 PM</td>
         <td>
           Enter value as demo_user in Username TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:47 AM</td>
+        <td>1:26:07 PM</td>
         <td>
           Enter value as demo_password in Password TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:48 AM</td>
+        <td>1:26:08 PM</td>
         <td>
           Click on Login
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:48 AM</td>
+        <td>1:26:08 PM</td>
         <td>
           Unable to login with invalid credentials
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:48 AM</td>
+        <td>1:26:08 PM</td>
         <td>
           Enter value as admin in Username TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:48 AM</td>
+        <td>1:26:08 PM</td>
         <td>
           Enter value as admin in Password TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:49 AM</td>
+        <td>1:26:09 PM</td>
         <td>
           Click on Login
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:49 AM</td>
+        <td>1:26:09 PM</td>
         <td>
           Logged in successfully 
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:50 AM</td>
+        <td>1:26:10 PM</td>
         <td>
           Click on View Account Summary
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:50 AM</td>
+        <td>1:26:10 PM</td>
         <td>
           Select 800001 Checking from DropDown
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:50 AM</td>
+        <td>1:26:13 PM</td>
         <td>
           Click on Go Button
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:50 AM</td>
+        <td>1:26:14 PM</td>
         <td>
-          Available Balance 12766452.44 is validated
+          Available Balance 116482.44 is validated
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:51 AM</td>
+        <td>1:26:14 PM</td>
         <td>
           Click on Transfer Funds
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:51 AM</td>
+        <td>1:26:14 PM</td>
         <td>
           Select 800000 Corporate from DropDown
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:51 AM</td>
+        <td>1:26:14 PM</td>
         <td>
           Select 800001 Checking from DropDown
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:51 AM</td>
+        <td>1:26:14 PM</td>
         <td>
           Enter value as 9876 in Amount to be transfered TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:52 AM</td>
+        <td>1:26:15 PM</td>
         <td>
           Click on Transfer Money Button
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:52 AM</td>
+        <td>1:26:15 PM</td>
         <td>
           Transfer Detail message is validated
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:52 AM</td>
+        <td>1:26:16 PM</td>
         <td>
           Click on View Recent Transactions
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:53 AM</td>
+        <td>1:26:16 PM</td>
         <td>
           Amount 9876 withdrawn from 800000 successfully
-    <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='./ScreenShot/E2E_01 Wed-Jan-04-10-44-53-IST-2023.jpg' src="./ScreenShot/E2E_01 Wed-Jan-04-10-44-53-IST-2023.jpg">
-    
-    </div></div>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>10:44:53 AM</td>
+        <td>1:26:16 PM</td>
         <td>
           Amount 9876 deposit on 800001 successfully
-    <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='./ScreenShot/E2E_01 Wed-Jan-04-10-44-53-IST-2023.jpg' src="./ScreenShot/E2E_01 Wed-Jan-04-10-44-53-IST-2023.jpg">
-    
-    </div></div>
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:26:20 PM</td>
+        <td>
+          Click on Contact us
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:26:21 PM</td>
+        <td>
+          Click on Online form
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:26:21 PM</td>
+        <td>
+          Enter value as Test123456 in Comment TextBox
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:26:22 PM</td>
+        <td>
+          Click on Submit Button
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:26:23 PM</td>
+        <td>
+          Click on Sign Off
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:26:23 PM</td>
+        <td>
+          Sign Off validated
         </td>
       </tr>
   </tbody>
@@ -283,13 +317,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 4, 2023 10:44:42 AM</h3>
+<h3>Jan 24, 2023 01:26:01 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 4, 2023 10:44:53 AM</h3>
+<h3>Jan 24, 2023 01:26:23 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -340,7 +374,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>22</b> events passed</small></div>
+<div><small data-tooltip='100%'><b>28</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>0</b> others
@@ -359,7 +393,7 @@
 </div></div>
 <script>
 var timeline = {
-"E2E_01":11.095
+"E2E_01":22.369
 };
 </script>
 <div class="row">
@@ -385,7 +419,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 22,
+passEvents: 28,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
