--- a/Reports/E2E_01Tue-Jan-24-13-33-20-IST-2023.html
+++ b/Reports/E2E_01Tue-Jan-24-13-33-20-IST-2023.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 4, 2023 12:58:35 AM</span></a>
+<a href="#"><span class="badge badge-primary">Jan 24, 2023 01:33:20 PM</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">E2E_01</p>
             <p class="text-sm">
-              <span>12:58:36 AM</span> / <span>00:00:09:047</span>
+              <span>1:33:20 PM</span> / <span>00:00:17:209</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">E2E_01</h5>
-<span class='badge badge-success'>01.04.2023 12:58:36 AM</span>
-<span class='badge badge-danger'>01.04.2023 12:58:45 AM</span>
-<span class='badge badge-default'>00:00:09:047</span>
+<span class='badge badge-success'>01.24.2023 1:33:20 PM</span>
+<span class='badge badge-danger'>01.24.2023 1:33:38 PM</span>
+<span class='badge badge-default'>00:00:17:209</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,135 +104,206 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:39 AM</td>
+        <td>1:33:24 PM</td>
         <td>
           Launch Browser
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:41 AM</td>
+        <td>1:33:26 PM</td>
         <td>
           Enter value as demo_user in Username TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:41 AM</td>
+        <td>1:33:26 PM</td>
         <td>
           Enter value as demo_password in Password TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:41 AM</td>
+        <td>1:33:27 PM</td>
         <td>
           Click on Login
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:42 AM</td>
+        <td>1:33:27 PM</td>
         <td>
           Unable to login with invalid credentials
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:42 AM</td>
+        <td>1:33:27 PM</td>
         <td>
           Enter value as admin in Username TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:42 AM</td>
+        <td>1:33:28 PM</td>
         <td>
           Enter value as admin in Password TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:42 AM</td>
+        <td>1:33:29 PM</td>
         <td>
           Click on Login
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:42 AM</td>
+        <td>1:33:29 PM</td>
         <td>
           Logged in successfully 
+    <div class="row mb-3"><div class="col-md-3">
+<img data-featherlight='C:\Users\DELL\eclipse-workspace\HealthGraphProject\ScreenShot\E2E_01 Tue-Jan-24-13-33-29-IST-2023.png' src="C:\Users\DELL\eclipse-workspace\HealthGraphProject\ScreenShot\E2E_01 Tue-Jan-24-13-33-29-IST-2023.png">
+    
+    </div></div>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:43 AM</td>
+        <td>1:33:30 PM</td>
         <td>
           Click on View Account Summary
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:43 AM</td>
+        <td>1:33:30 PM</td>
         <td>
           Select 800001 Checking from DropDown
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:43 AM</td>
+        <td>1:33:31 PM</td>
         <td>
           Click on Go Button
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:44 AM</td>
+        <td>1:33:31 PM</td>
         <td>
-          Available Balance 474787979442049060000.00 is validated
+          Available Balance 136234.44 is validated
+    <div class="row mb-3"><div class="col-md-3">
+<img data-featherlight='C:\Users\DELL\eclipse-workspace\HealthGraphProject\ScreenShot\E2E_01 Tue-Jan-24-13-33-31-IST-2023.png' src="C:\Users\DELL\eclipse-workspace\HealthGraphProject\ScreenShot\E2E_01 Tue-Jan-24-13-33-31-IST-2023.png">
+    
+    </div></div>
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:44 AM</td>
+        <td>1:33:32 PM</td>
         <td>
           Click on Transfer Funds
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:44 AM</td>
+        <td>1:33:32 PM</td>
         <td>
           Select 800000 Corporate from DropDown
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:44 AM</td>
+        <td>1:33:32 PM</td>
         <td>
           Select 800001 Checking from DropDown
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:44 AM</td>
+        <td>1:33:32 PM</td>
         <td>
           Enter value as 9876 in Amount to be transfered TextBox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:45 AM</td>
+        <td>1:33:33 PM</td>
         <td>
           Click on Transfer Money Button
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:58:45 AM</td>
+        <td>1:33:33 PM</td>
         <td>
           Transfer Detail message is validated
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:34 PM</td>
+        <td>
+          Click on View Recent Transactions
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:34 PM</td>
+        <td>
+          Amount 9876 withdrawn from 800000 successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:34 PM</td>
+        <td>
+          Amount 9876 deposit on 800001 successfully
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:35 PM</td>
+        <td>
+          Click on Contact us
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:36 PM</td>
+        <td>
+          Click on Online form
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:36 PM</td>
+        <td>
+          Enter value as Test123456 in Comment TextBox
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:36 PM</td>
+        <td>
+          Click on Submit Button
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:38 PM</td>
+        <td>
+          Click on Sign Off
+        </td>
+      </tr>
+      <tr class="event-row">
+        <td><span class="badge log pass-bg">Pass</span></td>
+        <td>1:33:38 PM</td>
+        <td>
+          Sign Off validated
         </td>
       </tr>
   </tbody>
@@ -254,13 +325,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 4, 2023 12:58:35 AM</h3>
+<h3>Jan 24, 2023 01:33:20 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 4, 2023 12:58:45 AM</h3>
+<h3>Jan 24, 2023 01:33:38 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -311,7 +382,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>19</b> events passed</small></div>
+<div><small data-tooltip='100%'><b>28</b> events passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> events failed,
 <b data-tooltip='%'>0</b> others
@@ -330,7 +401,7 @@
 </div></div>
 <script>
 var timeline = {
-"E2E_01":9.047
+"E2E_01":17.209
 };
 </script>
 <div class="row">
@@ -356,7 +427,7 @@ warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
 eventsCount: 5,
-passEvents: 19,
+passEvents: 28,
 failEvents: 0,
 warningEvents: 0,
 skipEvents: 0,
